hphp/test/zend/good/ext/date/tests/gmstrftime_variation10.php.skipif
<?php
if (strtoupper(substr(PHP_OS, 0, 3)) == 'WIN') {
    die("skip Test is not valid for Windows");
}
?>