hphp/test/zend/bad/ext/standard/tests/file/clearstatcache_001.php.skipif
<?php
if (strncmp(PHP_OS, "WIN", 3) === 0) {
    die('skip not for Windows');
}
?>